unpackaged/main/default/objects/ebotdata__Bot_Config__mdt/ebotdata__Bot_Config__mdt.object-meta.xml
<CustomObject>
    <description>Metadata to control Einstein Bot features like Chat and Error Logging</description>
    <label>Bot Config</label>
    <pluralLabel>Bot Configs</pluralLabel>
</CustomObject>