unpackaged/main/default/objects/ebotdata__Bot_Config__mdt/fields/ebotdata__Agent_Availabilty_By_Metadata__c.field-meta.xml
<CustomField>
    <fullName>ebotdata__Agent_Availabilty_By_Metadata__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Agent Availabilty By Metadata</label>
    <type>Checkbox</type>
</CustomField>