unpackaged/main/default/objects/ebotdata__Bot_Config__mdt/fields/ebotdata__Business_Hours_Record_Name__c.field-meta.xml
<CustomField>
    <fullName>ebotdata__Business_Hours_Record_Name__c</fullName>
    <label>Business Hours Record Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>