unpackaged/main/default/objects/ebotdata__Bot_Config__mdt/fields/ebotdata__Calculate_Escalation_by_Intent_Name__c.field-meta.xml
<CustomField>
    <fullName>ebotdata__Calculate_Escalation_by_Intent_Name__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When enabled run the new batch script logic by custom metadata records otherwise by LCT events</description>
    <label>Calculate Escalation by Intent Name</label>
    <type>Checkbox</type>
</CustomField>