unpackaged/main/default/objects/ebotdata__Bot_Config__mdt/fields/ebotdata__Delete_Logs__c.field-meta.xml
<CustomField>
    <fullName>ebotdata__Delete_Logs__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Delete Logs</label>
    <type>Checkbox</type>
</CustomField>