unpackaged/main/default/objects/ebotdata__Bot_Config__mdt/fields/ebotdata__Log_Chat__c.field-meta.xml
<CustomField>
    <fullName>ebotdata__Log_Chat__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Whether the Bot should log all provisioned chat conversions in Einstein Bot Chat Logs object.</description>
    <inlineHelpText>Unchecking this will stop all chat logging</inlineHelpText>
    <label>Log Chat</label>
    <type>Checkbox</type>
</CustomField>