unpackaged/main/default/objects/ebotdata__Bot_Config__mdt/fields/ebotdata__Retain_Data_For_X_Days__c.field-meta.xml
<CustomField>
    <fullName>ebotdata__Retain_Data_For_X_Days__c</fullName>
    <label>Retain Data For X Days</label>
    <length>255</length>
    <type>Text</type>
</CustomField>